# hackatown2018

./: set_ros_master.sh
ROS_WS/devel/: .catkin  .rosinstall  setup.sh
ROS_WS/devel/lib/pkgconfig/: beginner_tutorials.pc  runner.pc
ROS_WS/devel/lib/python2.7/dist-packages/beginner_tutorials/: __init__.py
ROS_WS/devel/lib/python2.7/dist-packages/runner/: __init__.py
ROS_WS/devel/lib/runner/: runner_node
ROS_WS/devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
ROS_WS/devel/share/runner/cmake/: runnerConfig.cmake
ROS_WS/src/detection_runner/: CMakeLists.txt  package.xml
ROS_WS/src/detection_runner/scripts/: py_runner.py
ROS_WS/src/detection_runner/src/: runner.cpp
svtestlpt/devel/: .catkin  .rosinstall  setup.sh
svtestlpt/devel/include/svtest/: mtleds.h
svtestlpt/devel/lib/pkgconfig/: svtest.pc
svtestlpt/devel/lib/python2.7/dist-packages/svtest/msg/: __init__.py  _mtleds.py
svtestlpt/devel/share/common-lisp/ros/svtest/msg/: _package.lisp  _package_mtleds.lisp  mtleds.lisp  svtest-msg.asd
svtestlpt/devel/share/gennodejs/ros/svtest/msg/: _index.js  mtleds.js
svtestlpt/devel/share/roseus/ros/svtest/: manifest.l
svtestlpt/devel/share/roseus/ros/svtest/msg/: mtleds.l
svtestlpt/devel/share/svtest/cmake/: svtest-msg-extras.cmake  svtest-msg-paths.cmake  svtestConfig.cmake
svtestlpt/src/svtestlpt/: CMakeLists.txt  package.xml
svtestlpt/src/svtestlpt/msg/: mtleds.msg
svtestlpt/src/svtestlpt/src/: py_runner.py  talker.py  yolo.py
